--- a/packages/web/src/pages/Home/styles.css
+++ b/packages/web/src/pages/Home/styles.css
@@ -1,7 +1,9 @@
 #page-home {
   height: 100vh;
 
-  background: url('../../assets/home-background.svg') no-repeat 600px bottom;
+  background: url('../../assets/home-background.svg') no-repeat;
+  background-position: right bottom;
+  background-size: 50%;
 }
 
 #page-home .content {
